--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   },
   "dependencies": {
     "antd": "^3.3.3",
+    "email-validator": "^1.1.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "3.1.3",
     "react-router-dom": "4.2.2",
+    "redux": "^3.7.2",
     "sleep-promise": "^2.0.0",
     "uuid": "^3.2.1"
   },
@@ -45,6 +47,7 @@
     "babel-eslint": "8.0.2",
     "babel-jest": "^22.4.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-import": "^1.6.7",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
@@ -53,6 +56,7 @@
     "babel-preset-stage-2": "6.24.1",
     "copy-webpack-plugin": "4.2.3",
     "css-loader": "^0.28.11",
+    "emotion": "^9.1.0",
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "1.1.0",
     "eslint": "4.12.1",
