--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-info": "^3.3.15",
-    "@storybook/react": "^3.3.15",
+    "@storybook/addon-actions": "v4.0.0-alpha.4",
+    "@storybook/addon-info": "v4.0.0-alpha.4",
+    "@storybook/react": "v4.0.0-alpha.4",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.2",
@@ -78,7 +78,7 @@
     "storybook-router": "^0.3.3",
     "style-loader": "^0.20.3",
     "url-loader": "0.6.2",
-    "webpack": "^3",
+    "webpack": "^4.8.1",
     "webpack-dev-server": "^3.1.4"
   },
   "jest": {
