--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "es6": true
   },
   "rules": {
+    "array-bracket-spacing": [0],
     "import/no-extraneous-dependencies": [0],
     "jsx-a11y/label-has-for": [0],
     "react/require-default-props": [0],
