--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "Jest"
   ],
   "scripts": {
-    "start": "rimraf build && webpack-dev-server --config .webpack/dev.config.js",
-    "clean": "rimraf dist",
-    "production": "npm run clean && webpack --config .webpack/production.config.js --progress --profile --colors",
+    "start": "rimraf build && webpack-dev-server --config .webpack/development.config.js -d -p",
+    "production": "rimraf dist && webpack --config .webpack/production.config.js -p",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "test": "npm run lint && npm run test:unit",
@@ -60,25 +59,28 @@
     "enzyme-adapter-react-16": "1.1.0",
     "eslint": "4.12.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "2.0.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "1.1.11",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "3.2.0",
     "jest": "^22.4.3",
+    "mini-css-extract-plugin": "^0.4.0",
     "open-browser-webpack-plugin": "0.0.5",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.2.0",
     "rimraf": "2.6.2",
     "storybook-router": "^0.3.3",
     "style-loader": "^0.20.3",
-    "url-loader": "0.6.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "1.0.1",
     "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "jest": {
